--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
