--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "5.14.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-material-ui-carousel": "^3.4.2",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.17.0"
